# ascend4

./: .gitignore  CHANGELOG.txt  INSTALL  INSTALL.txt  LICENSE.txt  README-build-service.txt  README-osx.txt  README-windows.txt  README.md  SConstruct  a4.in  a4c.lang  ascend-C.omf  ascend-config.in  ascend.spec  ascend.spec.in  configure  configure.in  installer.nsi  runqrslv.c  subversionSetupAndUse.txt  test.py
ascend4/: COPYING  ConfigAscend.in  ConfigAscend.vc  Makefile.Rules.in  Makefile.Rules.vc  Makefile.in  Makefile.vc  README  license.txt
ascxx/: Doxyfile  SConscript  annotation.cpp  ascpy.i  ascxxset.cpp  ascxxset.h  ascxxtest.cpp  backend_gtk3.py  backend_gtk3agg.py  compiler.cpp  compiler.h  config.h.in  container.cpp  container.h  curve.cpp  curve.h  dimensions.cpp  disvar.cpp  disvar.h  extmethod.cpp  extmethod.h  incidencematrix.cpp  incidencematrix.h  instance.cpp  instance.h  instanceinterfacedata.h  integrator.cpp  integrator.h  integratorreporter.cpp  integratorreporter.h  library.cpp  library.h  matrix.cpp  matrix.h  method.cpp  module.h  name.cpp  plot.cpp  plot.h  plot.i  (+30 more)
blas/: Jamfile  Makefile.in  SConscript  dasum.f  daxpy.f  dcopy.f  ddot.f  dgemm.f  dgemv.f  dnrm2.f  dscal.f  dswap.f  dtrsm.f  dtrsv.f  idamax.f  lsame.f  xerbla.f
cvode/: Makefile
debian/: ascend-config.man  ascend-dev.install  ascend-dev.manpages  ascend-doc.docs  ascend-models.install  ascend-pygtk.install  ascend-tcltk.install  ascend.1  ascend.install  ascend.man  ascend.manpages  ascend.mime  ascend4.man  changelog  control  copyright  dirs  libascend-dev.install  libascend.install  postinst  rules
doc/: SConscript  ascend.bib  book.lyx  howto-atoms.lyx  howto-conditional.lyx  howto-dersyntax.lyx  howto-dimeqns.lyx  howto-events.lyx  howto-ivp.lyx  howto-methods.lyx  howto-model1.lyx  howto-model2.lyx  howto-model3.lyx  howto-model3Fig3.eps  howto-overview.lyx  howto-physprops.lyx  howto-physpropsFig3.eps  howto-plot.lyx  howto-plotFig2.eps  howto-require.lyx  howto-units.lyx  syntax.lyx
emacsMode/: ascend-mode.el  ascend-mode.elc
help/: Makefile.Rules.in  Makefile.Template  Makefile.in  utilities.htm
interface/: Makefile.in  ascpy.i  filechooser.py  incidencematrix.h  instanceinterfacedata.cpp  library.cpp  module.cpp  plot.i  properties.py  relation.cpp  reporter.h  selftest.py  simulation.h  solver.i  solverparameter.cpp  solverparameter.h  solverreporter.py  symchar.cpp  testsolverinit.cpp  varentry.py  variable.h
ipslv-temp/: README.txt  analyze.all_but_eachpair.c  analyze.allterms.c  slv4.comp.c  slv5.all_but_eachpair.c  slv5.allterms.c  slv5.longapplystep.c  slv5.mehrotra_no_quad.c  slv5.mehrotraquad.c  slv5.montero.c  slv5.no_change.c  slv5.scaled.c  slv5.westdir.c  slv5.westdir_best.c  slv5.westdir_notruncate.c  slv5.westdir_trunccorr.c
jam/: Jambase  Jamfile  Jamrules.in  Jamrules_general  Jamrules_general.in  ReadMe.txt  configure
linpack/: Jamfile  Makefile.in  SConscript  d1mach.c  d1mach.f  d1mach.f.readme  dgbfa.f  dgbsl.f  dgefa.f  dgesl.f
lp_solve_2.0/: MANIFEST  Makefile  demo.c  lp.y  lp2mps.c  lp_solve.c  lpglob.h  lpkit.c  lpkit.h  mps2lp.c  read.c  readmps.c  solve.c
lsod/: Jamfile  Makefile.in  SConscript
mac/: Info.plist  ascend.icns  ascend.plist  install-gtk.py
pygtk/interface/: .cvsignore  Makefile  Makefile.bt  Makefile.in  SConscript  ascend  ascend.bat  ascend.glade  ascend.gladep  ascend.i  ascend.in  ascend.lang  ascend.syn  ascendgui.py  ascpy.i  config.h.in  config.in  config.py.in  configpy.in  configure  configure.in  create.nsi  curve.cpp  curve.h  diagnose.py  dimensions.cpp  dimensions.h  error.c  extfn.cpp  extfn.h  extmethod.h  filechooser.py  gtkbrowser.py  help.py  incidencematrix.cpp  incidencematrix.h  incidencematrix.py  instance.cpp  instance.h  instanceinterfacedata.h  (+51 more)
pygtk/interface/desktop/: ascend.desktop  ascend.xml
pygtk/interface/drag-drop-example/: dnd.glade  dnd.py
pygtk/interface/glade/: ascend.glade  ascend.gladep
pygtk/interface/matplotlib-example/: project2.glade
(+3731 files in other folders)
