AC_INIT(simulation.h)
AC_CONFIG_AUX_DIR(../../base/autotools/config)

echo "user home: $HOME"
echo "current dir: $PWD"

ASCEND_INCDIR="$PWD/../../base/generic/lib"
ASCEND_LIBDIR="$PWD/../../base/jam/Release/linux"
ASCEND_TMPDIR="/tmp"
ASCEND_MAKEFILEDIR_1="$PWD"
ASCEND_MAKEFILEDIR="$PWD/../../base/generic/lib"

# Coverage testing
AC_ARG_ENABLE([coverage-testing],
	AC_HELP_STRING([--enable-coverage-testing],
		[Instrument files with gcov coverage testing code])
,
	if test $enableval; then
		COVERAGE_FLAGS="-fprofile-arcs -ftest-coverage"
	else
		COVERAGE_FLAGS=""
	fi
,
	COVERAGE_FLAGS=""
)

# Default library location
# can be overridden by a value in ~/.ascend.ini
ASCEND_DEFAULTLIBRARY="../../models"

# Where the final-installed documentation files are:
HELPROOT="$HOME/ascend-doc/"

# Where the online documentation is:
WEBHELPROOT="http://pye.dyndns.org/ascend/manual/"

GLADE_FILE="glade/ascend.glade"

AC_CANONICAL_TARGET

case $target in
	*-*-cygwin*)
		echo "CYGWIN BUILD"
		PLATFORM_CPPFLAGS=-DPY_LONG_LONG="long long"
		SO_SUFF=.dll
		ICON_EXTENSION=.png
		;;
	*-*-mingw32*)
		echo "MINGW BUILD"
		PLATFORM_CPPFLAGS=
		SO_SUFF=.dll
		ICON_EXTENSION=.png
		;;
	*)
		PLATFORM_CPPFLAGS=
		SO_SUFF=.so
		ICON_EXTENSION=.svg
		;;
esac

AC_SUBST([MUMBLE_INIT])


AC_SUBST(ASCEND_INCDIR)
AC_SUBST(ASCEND_LIBDIR)
AC_SUBST(ASCEND_TMPDIR)
AC_SUBST(ASCEND_MAKEFILEDIR_1)
AC_SUBST(ASCEND_MAKEFILEDIR)
AC_SUBST(ICON_EXTENSION)
AC_SUBST(HELPROOT)
AC_SUBST(WEBHELPROOT)
AC_SUBST(GLADE_FILE)
AC_SUBST(ASCEND_PREFFILE)
AC_SUBST(SO_SUFF)
AC_SUBST(PLATFORM_CPPFLAGS)
AC_SUBST(ASCEND_DEFAULTLIBRARY)
AC_SUBST(COVERAGE_FLAGS)

AC_OUTPUT(config.h:config.in config.py:configpy.in Makefile)
